Release ScaleBench 1.1.1